@@ -59,7 +59,7 @@ author = 'Tiger-222'
 # built documents.
 #
 # The short X.Y version.
-version = '3.0.3'
+version = '3.1.0'
 # The full version, including alpha/beta/rc tags.
 release = 'latest'
 
