@@ -1,0 +1,27 @@
+# coding: utf-8
+"""
+This is part of the MSS Python's module.
+Source: https://github.com/BoboTiG/python-mss
+
+Screenshot of the monitor 1, using a custom class to handle the data.
+"""
+
+import mss
+
+
+class SimpleScreenShot(object):
+    """
+    Define your own custom method to deal with screen shot raw data.
+    Of course, you can inherit from the ScreenShot class and change
+    or add new methods.
+    """
+
+    def __init__(self, data, monitor):
+        self.data = data
+        self.monitor = monitor
+
+
+with mss.mss() as sct:
+    sct.cls_image = SimpleScreenShot
+    image = sct.grab(sct.monitors[1])
+    # ...
